--- a/tex/modules/1-E/readiness/test.tex
+++ b/tex/modules/1-E/readiness/test.tex
@@ -1,35 +1,19 @@
+% IF-AT Form B002 1-10
 \begin{readinessAssuranceTest}
 
-%
-%1  C
-%\item Which of these graphs represents the following system of linear equations?
-%      \begin{align*}
-%      x+2y   &=   4 \\
-%      2x-3y  &=  1
-%      \end{align*}
-%
-%\begin{multicols}{4}
-%\begin{readinessAssuranceTestChoices}
-%\item \systemWithInfinitelyManySolutions
-%\item \systemWithNoSolutions
-%\item \systemWithOneSolutionA % correct
-%\item \systemWithOneSolutionB
-%\end{readinessAssuranceTestChoices}
-%\end{multicols}
-
-%1 C
+%1 A
 \item Which of the following describe the set of all points on the line \(2x+3y=0\)?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item \(\displaystyle \left\{ (x,y) \,\middle|\, 2x+3y=0 \right\}\) %Correct
 \item \(\displaystyle \left\{ (x,y) \right\}\)
 \item \(\displaystyle \left\{ (2x,3y) \right\}\)
-\item \(\displaystyle \left\{ (x,y) \,\middle|\, 2x+3y=0 \right\}\) %Correct
 \item \(\displaystyle \left\{ (2x,3y) \,\middle|\, 2x+3y=0 \right\}\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 
-%2  A
+%2  B
 \item How many solutions are there for the system of linear equations
       represented by the following graph?
     \begin{center}
@@ -38,28 +22,12 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item Zero
 \item One % correct
 \item Two
-\item Zero
 \item Infinitely-many
 \end{readinessAssuranceTestChoices}
 \end{multicols}
-
-%3  D
-%\item Which of these graphs represents the following system of linear equations?
-%      \begin{align*}
-%      3x+3y   &=   6 \\
-%      x+y  &=  2
-%      \end{align*}
-%
-%\begin{multicols}{4}
-%\begin{readinessAssuranceTestChoices}
-%\item \systemWithOneSolutionA
-%\item \systemWithOneSolutionB
-%\item \systemWithNoSolutions
-%\item \systemWithInfinitelyManySolutions % correct
-%\end{readinessAssuranceTestChoices}
-%\end{multicols}
 
 %3 D
 \item Which of the following points is an element of the set 
@@ -73,7 +41,7 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%4  D
+%4  C
 \item How many solutions are there for the system of linear equations
       represented by the following graph? (This graph represents two completely
       overlapping lines.)
@@ -83,10 +51,10 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item Zero
 \item One
 \item Two
 \item Infinitely-many % correct
+\item Zero
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
@@ -108,7 +76,7 @@
 \end{multicols}
 
 
-%6  A
+%6  B
 \item How many solutions are there for the system of linear equations
       represented by the following graph? (This graph represents two
       non-overlapping parallel lines.)
@@ -118,15 +86,15 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item Infinitely-many
 \item Zero % correct
 \item One
 \item Two
-\item Infinitely-many
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 
-%7  A
+%7  C
 \item Solve the following system of linear equations.
       \begin{align*}
       y   &=   2x+5 \\
@@ -135,15 +103,15 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \((x,y)=(-1,3)\) % correct
-\item \((x,y)=(4,-2)\)
 \item There are no solutions.
 \item There are infinitely-many solutions.
+\item \((x,y)=(-1,3)\) % correct
+\item \((x,y)=(4,-2)\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 
-%8  C
+%8  B
 \item Solve the following system of linear equations.
       \begin{align*}
       y   &=  3x+5 \\
@@ -152,12 +120,12 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
+\item There are infinitely-many solutions.
+\item There are no solutions. % correct
 \item
 \((x,y)=(3,4)\)
 \item
 \((x,y)=(-5,1)\)
-\item There are no solutions. % correct
-\item There are infinitely-many solutions.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
@@ -181,7 +149,7 @@
 \end{multicols}
 
 
-%10 B
+%10 D
 \item Solve the following system of linear equations.
       \begin{align*}
       4x-8y   &= 12 \\
@@ -190,12 +158,12 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item There are no solutions.
-\item There are infinitely-many solutions. % correct
 \item
 \((x,y)=(3,3)\)
 \item
 \((x,y)=(-2,1)\)
+\item There are no solutions.
+\item There are infinitely-many solutions. % correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
