--- a/tex/modules/5-M/readiness/test.tex
+++ b/tex/modules/5-M/readiness/test.tex
@@ -1,6 +1,7 @@
+%IF-AT Form B002 31-40
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{40}
-%B
+%A
 \item Suppose $f(x)$ and $g(x)$ are real-valued functions satisfying
 \begin{align*}
 f(2) &= 4 & g(2) & = 4 \\
@@ -10,20 +11,20 @@ f(4) &= 3 & g(4) &= 2
 Compute $(f \circ g)(2)$.
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item $2$
 \item $3$ %Correct
 \item $4$
 \item $5$
+\item $6$
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%B
+%C
 \item Let $f(x) = x^2-2$ and $g(x)= x^2+1$.  Compute the composition function $(f \circ g)(x)$.
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item $x^2-1$
-\item $x^4+2x^2-1$ %Correct
 \item $x^4-4x^2+5$
+\item $x^4+2x^2-1$ %Correct
 \item $x^4-x^2-2$
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -41,77 +42,75 @@ Compute $(f \circ g)(2)$.
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%B
+%A
 \item Let \(T: \IR^3 \rightarrow \IR^2\) be the linear map corresponding to the standard matrix \(\begin{bmatrix} 2 & 1 & -1 \\ 0 & 1 & 3  \end{bmatrix} \).  Compute \(T\left(\begin{bmatrix} 1 \\ -1 \\ 3 \end{bmatrix} \right)\).
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item $\begin{bmatrix} -2 \\ -8  \end{bmatrix}$
 \item $\begin{bmatrix}  -2 \\ 8 \end{bmatrix}$ %Correct
+\item $\begin{bmatrix} -2 \\ -8  \end{bmatrix}$
 \item $\begin{bmatrix} 2 \\ -4 \end{bmatrix}$
 \item $\begin{bmatrix}  2 \\ 4 \end{bmatrix}$ 
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%C
+%D
 \item Let $T: \IR^2 \rightarrow \IR^3$ be the linear transformation corresponding to the standard matrix $A=\begin{bmatrix} 2 & 3 \\ -1 & -1 \\ 0 & 4 \end{bmatrix}$.  Compute $T\left(\begin{bmatrix} 2 \\ -1 \end{bmatrix}\right)$.
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item $\begin{bmatrix} 2 \\ -1 \\ 0 \end{bmatrix}$
 \item $\begin{bmatrix} 5 \\ 7 \\ 4\end{bmatrix}$
-\item $\begin{bmatrix} 1 \\ -1 \\ -4 \end{bmatrix}$ %Correct
 \item $\begin{bmatrix} 4 \\ -1 \\ 8 \end{bmatrix}$
+\item $\begin{bmatrix} 1 \\ -1 \\ -4 \end{bmatrix}$ %Correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 \newpage
-%A
+%C
 \item Let \(T: \IR^4 \rightarrow \IR^2\) be the linear transformation corresponding to the standard matrix \(\begin{bmatrix} 3 & -1 & 0 & 2 \\ -2 & -4 & -1 & 1 \end{bmatrix} \).  What are the domain and codomain of \(T\)?
-%\begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item The domain is \(\IR^4\) and the codomain is \(\IR^2\)
 \item The domain is \(\IR^2\) and the codomain is \(\IR^4\)
 \item The domain and codomain are both \(\IR^2\)
+\item The domain is \(\IR^4\) and the codomain is \(\IR^2\) %correct
 \item The domain and codomain are both \(\IR^4\)
 \end{readinessAssuranceTestChoices}
-%\end{multicols}
 
-%D
+%B
 \item Which of the following is true of the linear transformation $T: \IR^3 \rightarrow \IR^3$ given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3y-4z \\ x+y \\ 3z \end{bmatrix}?$$
 \begin{readinessAssuranceTestChoices}
 \item $T$ is neither injective nor surjective
+\item $T$ is both injective and surjective %Correct
 \item $T$ is injective but not surjective
 \item $T$ is surjective but not injective
-\item $T$ is both injective and surjective %Correct
-\end{readinessAssuranceTestChoices}
-
-
-%A
-\item Which of the following is true of the linear transformation $T:\IR^3 \rightarrow \IR^2$ given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x-y \\ x+z \end{bmatrix} ?$$
-\begin{readinessAssuranceTestChoices}
-\item $T$ is surjective but not injective %Correct
-\item $T$ is injective but not surjective
-\item $T$ is both injective and surjective
-\item $T$ is neither injective nor surjective
 \end{readinessAssuranceTestChoices}
 
 
 %C
-\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with standard matrix $A$.  Which of the following is {\bf not} a characterization of the statement ``$T$ is injective''?
+\item Which of the following is true of the linear transformation $T:\IR^3 \rightarrow \IR^2$ given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x-y \\ x+z \end{bmatrix} ?$$
 \begin{readinessAssuranceTestChoices}
-\item If $T(\vec{v})=T(\vec{w})$ for some $\vec{v}, \vec{w} \in \IR^n$, then $\vec{v}=\vec{w}$.
-\item The columns of $A$ are linearly independent
-\item $T$ has a non-trivial kernel %Correct
-\item $\RREF(A)$ has only pivot columns
+\item $T$ is injective but not surjective
+\item $T$ is both injective and surjective
+\item $T$ is surjective but not injective %Correct
+\item $T$ is neither injective nor surjective
 \end{readinessAssuranceTestChoices}
 
 
 %B
+\item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with standard matrix $A$.  Which of the following is {\bf not} a characterization of the statement ``$T$ is injective''?
+\begin{readinessAssuranceTestChoices}
+\item If $T(\vec{v})=T(\vec{w})$ for some $\vec{v}, \vec{w} \in \IR^n$, then $\vec{v}=\vec{w}$.
+\item $T$ has a non-trivial kernel %Correct
+\item The columns of $A$ are linearly independent
+\item $\RREF(A)$ has only pivot columns
+\end{readinessAssuranceTestChoices}
+
+
+%D
 \item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with standard matrix $A$.  Which of the following is {\bf not} a characterization of the statement ``$T$ is surjective''?
 \begin{readinessAssuranceTestChoices}
 \item $\RREF(A)$ has a pivot in every row
-\item $\RREF(A)$ has has a pivot in every column %Correct
 \item $\Im T = \IR^m$
 \item The columns of $A$ span $\IR^m$
+\item $\RREF(A)$ has has a pivot in every column %Correct
 \end{readinessAssuranceTestChoices}
 
 
