--- a/tex/modules/6-G/readiness/test.tex
+++ b/tex/modules/6-G/readiness/test.tex
@@ -1,12 +1,13 @@
+%IF-AT Form B002 41-50
 \begin{readinessAssuranceTest}
-%A
+%D
 \item Find the area of the parallelogram with vertices $(0,0)$, $(4,0)$, $(5,2)$, and $(1,2)$.
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
-\item $8$ %Correct
-\item $10$
-\item $12$
 \item $14$
+\item $12$
+\item $10$
+\item $8$ %Correct
 \end{readinessAssuranceTestChoices}
 
 
@@ -17,14 +18,14 @@
 \end{tikzpicture}
 \end{multicols}
 
-%A
+%B
 \item Find the area of the parallelogram with vertices $(0,0)$, $(12,5)$, $(12,8)$, and $(0,3)$.
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
-\item $36$ %Correct
 \item $54$
-\item $72$
+\item $36$ %Correct
 \item $96$
+\item $72$
 \end{readinessAssuranceTestChoices}
 
 
@@ -35,14 +36,14 @@
 \end{tikzpicture}
 \end{multicols}
 
-%D
+%B
 \item The parallelogram ABCD has area $6$.  If AE is $50\%$ longer than AB, what is the area of the parallelogram AEFD?
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
 \item $18$
+\item $9$  %Correct
 \item $15$
 \item $12$
-\item $9$  %Correct
 \end{readinessAssuranceTestChoices}
 
 \begin{tikzpicture}[scale=0.4]
@@ -53,14 +54,14 @@
 \end{tikzpicture}
 \end{multicols}
 
-%C
+%D
 \item The parallelogram ABCD has area $6$.  If AD is twice as long as AF, what is the area of the parallelogram ABEF?
 \begin{multicols}{2}
 \begin{readinessAssuranceTestChoices}
-\item $1$
 \item $2$
-\item $3$ %Correct
+\item $1$
 \item $4$
+\item $3$ %Correct
 \end{readinessAssuranceTestChoices}
 
 \begin{tikzpicture}[scale=0.5]
@@ -82,45 +83,45 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%D
+%C
 \item Let $T: \IR^n \rightarrow \IR^n$ be a linear transformation with standard matrix $A$.  Which of the following is equivalent to the statement ``$A$ is an invertible matrix''?
 \begin{readinessAssuranceTestChoices}
 \item $A$ is a square matrix
 \item The matrix equation $AX=B$ has no solution for some $n\times 1$
       matrix $B$.
-\item $\RREF(A)$ has a column without a pivot
 \item $T$ is both injective and surjective %Correct
+\item $\RREF(A)$ has a column without a pivot
 \end{readinessAssuranceTestChoices}
 
-%B
+%D
 \item What is the matrix corresponding to the linear transformation $T: \IR^3 \rightarrow \IR^3$ given by $$T\left( \begin{bmatrix} x \\ y \\ z \end{bmatrix}\right) = \begin{bmatrix} 3x+2y-z \\ y+z \\x+7z \end{bmatrix}?$$
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item $\begin{bmatrix} 3 & 0 & 1 \\ 2 & 1 & 0 \\ -1 & 1 & 7 \end{bmatrix}$
-\item $\begin{bmatrix} 3 & 2 & -1 \\ 0 & 1 & 1 \\ 1 & 0 & 7  \end{bmatrix}$ %Correct
 \item $\begin{bmatrix} 3 & 2 & -1 \\ 1 & 1 & 0 \\ 1 & 7 & 0 \end{bmatrix}$
 \item $\begin{bmatrix}  3 & 1 & 1 \\ 2 & 1 & 7 \\ -1 & 0 & 0 \end{bmatrix}$
+\item $\begin{bmatrix} 3 & 2 & -1 \\ 0 & 1 & 1 \\ 1 & 0 & 7  \end{bmatrix}$ %Correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-%B
+%A
 \item What is the largest root of the polynomial $x^2+x-12$?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item $4$
 \item $3$ %Correct
-\item $2$
+\item $4$
 \item $1$
+\item $2$
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
 
-%A
+%B
 \item Which of the following is a root of the polynomial $x^2-4x+13$?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item $2-3i$ %Correct
 \item $3+4i$
+\item $2-3i$ %Correct
 \item $4-5i$
 \item $5+6i$
 \end{readinessAssuranceTestChoices}
