--- a/tex/modules/2-V/readiness/test.tex
+++ b/tex/modules/2-V/readiness/test.tex
@@ -1,3 +1,4 @@
+% IF-AT Form B002 11-20
 \begin{readinessAssuranceTest}
 \setcounter{enumi}{10}
 \item Simplify the following Euclidean vector expression.
@@ -52,6 +53,11 @@
 \begin{readinessAssuranceTestChoices}
 \item \(
         \begin{bmatrix}
+          0 \\ 4 \\ -8
+        \end{bmatrix}
+      \) % correct
+\item \(
+        \begin{bmatrix}
           6 \\ -8 \\ -3
         \end{bmatrix}
       \)
@@ -60,11 +66,6 @@
           3 \\ 2 \\ -5
         \end{bmatrix}
       \)
-\item \(
-        \begin{bmatrix}
-          0 \\ 4 \\ -8
-        \end{bmatrix}
-      \) % correct
 \item \(
         \begin{bmatrix}
           -2 \\ 0 \\ 1
@@ -101,8 +102,8 @@
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item \(5+i\)
-\item \(-3-9i\)
 \item \(-2+3i\) % correct
+\item \(-3-9i\)
 \item \(4i\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -113,9 +114,9 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(-4x^3-3x^2-2x+23\) % correct
 \item \(x^3+4x-5\)
 \item \(3x^3+5x^2-3x+17\)
+\item \(-4x^3-3x^2-2x+23\) % correct
 \item \(-x^3+19x^2-4\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
@@ -185,14 +186,6 @@
     \(
       \begin{bmatrix}[ccc|c]
         1 & 2 & 3 & -1 \\
-        0 & 4 & -1 & 2 \\
-        0 & -1 & -4 & 5 \\
-      \end{bmatrix}
-    \) % correct
-  \item
-    \(
-      \begin{bmatrix}[ccc|c]
-        1 & 2 & 3 & -1 \\
         1 & 3 & 4 & 3 \\
         2 & 3 & 2 & 3\\
       \end{bmatrix}
@@ -205,6 +198,14 @@
         2 & 3 & 2 & 3 \\
       \end{bmatrix}
     \)
+  \item
+    \(
+      \begin{bmatrix}[ccc|c]
+        1 & 2 & 3 & -1 \\
+        0 & 4 & -1 & 2 \\
+        0 & -1 & -4 & 5 \\
+      \end{bmatrix}
+    \) % correct
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -230,14 +231,6 @@
   \item
     \(
       \begin{bmatrix}[cc|c]
-        1 & 0 & 0 \\
-        0 & 1 & 0 \\
-        0 & 0 & 1 \\
-      \end{bmatrix}
-    \) % correct
-  \item
-    \(
-      \begin{bmatrix}[cc|c]
         1 & 2 & 3 \\
         1 & 3 & 4 \\
         0 & 0 & 0 \\
@@ -251,6 +244,14 @@
         0 & 0 & 0 \\
       \end{bmatrix}
     \)
+  \item
+    \(
+      \begin{bmatrix}[cc|c]
+        1 & 0 & 0 \\
+        0 & 1 & 0 \\
+        0 & 0 & 1 \\
+      \end{bmatrix}
+    \) % correct
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -263,6 +264,13 @@
 
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
+  \item \(\emptyset \) (i.e. the system is inconsistent).
+  \item \(
+          \setBuilder{ 
+          \begin{bmatrix}
+            1 +a\\ -2 \\ 1+3a
+          \end{bmatrix}}{a \in \IR}
+        \) 
   \item \(
           \left\{ \begin{bmatrix}
             1 \\ -6 \\ 1
@@ -273,13 +281,6 @@
             2 \\ 0 \\ -1
           \end{bmatrix} \right\}
         \) % correct
-  \item \(
-          \setBuilder{ 
-          \begin{bmatrix}
-            1 +a\\ -2 \\ 1+3a
-          \end{bmatrix}}{a \in \IR}
-        \) 
-  \item \(\emptyset \) (i.e. the system is inconsistent).
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
@@ -291,6 +292,13 @@
 
   \begin{multicols}{4}
   \begin{readinessAssuranceTestChoices}
+  \item \(\emptyset \) (i.e. the system is inconsistent).
+  \item \(
+         \setBuilder{ 
+          \begin{bmatrix}
+            -3a \\ 2a \\ a
+          \end{bmatrix}}{a \in \IR}
+        \)  % correct
   \item \(
           \left\{ \begin{bmatrix}
             4 \\ 1 \\ -5
@@ -301,13 +309,6 @@
             1 \\ 2 \\ -1
           \end{bmatrix}\right\}
         \)
-  \item \(
-         \setBuilder{ 
-          \begin{bmatrix}
-            -3a \\ 2a \\ a
-          \end{bmatrix}}{a \in \IR}
-        \)  % correct
-  \item \(\emptyset \) (i.e. the system is inconsistent).
   \end{readinessAssuranceTestChoices}
   \end{multicols}
 
