--- a/tex/modules/2-V/readiness/test.tex
+++ b/tex/modules/2-V/readiness/test.tex
@@ -211,7 +211,7 @@
 
 \item Find
   \(\RREF
-    \begin{bmatrix}[cc|c]
+    \begin{bmatrix}[ccc]
       1 & 2 & 3 \\
       0 & 4 & -1 \\
       2 & 3 & 2 \\
@@ -222,7 +222,7 @@
   \begin{readinessAssuranceTestChoices}
   \item
     \(
-      \begin{bmatrix}[cc|c]
+      \begin{bmatrix}[ccc]
         1 & 0 & 3 \\
         0 & 1 & -1 \\
         0 & 0 & 0 \\
@@ -230,7 +230,7 @@
     \)
   \item
     \(
-      \begin{bmatrix}[cc|c]
+      \begin{bmatrix}[ccc]
         1 & 2 & 3 \\
         1 & 3 & 4 \\
         0 & 0 & 0 \\
@@ -238,7 +238,7 @@
     \)
   \item
     \(
-      \begin{bmatrix}[cc|c]
+      \begin{bmatrix}[ccc]
         1 & 2 & 3 \\
         0 & 1 & 1 \\
         0 & 0 & 0 \\
@@ -246,7 +246,7 @@
     \)
   \item
     \(
-      \begin{bmatrix}[cc|c]
+      \begin{bmatrix}[ccc]
         1 & 0 & 0 \\
         0 & 1 & 0 \\
         0 & 0 & 1 \\
