add commented-out observation to better motivate V.0 activity

--- a/tex/modules/2-V/sections/0.tex
+++ b/tex/modules/2-V/sections/0.tex
@@ -3,8 +3,23 @@
 
 \begin{applicationActivities}
 
-% have students capture 8 properties of R2 from list of 11
-% include ca=b, unique equidistant, nonzero orthogonal
+%TODO add in this observation to better motivate next activity
+%\begin{observation}
+%Several properties of the real numbers, such as commutivity:
+%\[
+%  x + y = y + x
+%\]
+%also hold for Eudlicean vectors with multiple components:
+%\[
+%\begin{bmatrix}x_1\\x_2\end{bmatrix}
+%+
+%\begin{bmatrix}y_1\\y_2\end{bmatrix}
+%=
+%\begin{bmatrix}y_1\\y_2\end{bmatrix}
+%+
+%\begin{bmatrix}x_1\\x_2\end{bmatrix}
+%\]
+%\end{observation}
 
 \begin{activity}{20}\smallSlideText
 Consider each of the following properties of the real numbers
