technology-agnostic V.2 activities

--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -66,7 +66,7 @@
   \end{subactivity}
   \begin{subactivity}%optional
   Show that \(V\) contains an additive identity element satisfying
-  \[(x,y)+\vec{z}=(x,y)\]
+  \[(x,y)\oplus\vec{z}=(x,y)\]
   for all \((x,y)\in V\)
   by choosing appropriate values for \(\vec{z}=(\unknown,\unknown)\). 
   \end{subactivity}
