--- a/tex/modules/2-V/sections/2.tex
+++ b/tex/modules/2-V/sections/2.tex
@@ -48,7 +48,7 @@
   \end{subactivity}
 
   \begin{subactivity}
-    Find its solution set, using CoCalc.com to find \(\RREF\) of its
+    Find its solution set, using technology to find \(\RREF\) of its
     corresponding augmented matrix.
   \end{subactivity}
 
