--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -14,11 +14,12 @@ are available online.
       \(\begin{bmatrix} 1 & 3 & 2 \\ 2 & -9 & -1 \end{bmatrix}\)
       in the variable \(A\).
   \begin{itemize}
-    \item The symbolic form is used to calculate precise answers 
+    \item The symbolic function \texttt{sym} is used to calculate precise answers 
           rather than floating-point approximations.
     \item The vertical bar in an augmented matrix does not affect
-          row operations, so it does not need to be entered into
-          a calculator.
+          row operations, so the \(\RREF\) of
+      \(\begin{bmatrix}[cc|c] 1 & 3 & 2 \\ 2 & -9 & -1 \end{bmatrix}\)
+          may be computed in the same way.
   \end{itemize}
 \item Type \texttt{rref(A)} and press \texttt{Enter}
       to compute the reduced row echelon form of \(A\).
