--- a/tex/modules/2-V/sections/5.tex
+++ b/tex/modules/2-V/sections/5.tex
@@ -95,6 +95,22 @@
   has a column without a pivot position.
 \end{fact}
 
+
+\begin{observation}
+  Compare the following results:
+  
+  \begin{itemize}
+  \item A set of \(\IR^m\) vectors
+  \(\{\vect v_1,\dots\vect v_n\}\) is linearly independent if and only
+  if \(\RREF\begin{bmatrix}\vect v_1&\dots&\vect v_n\end{bmatrix}\)
+  has all pivot columns.
+  \item A set of \(\IR^m\) vectors
+  \(\{\vect v_1,\dots\vect v_n\}\) spans \(\IR^m\) if and only
+  if \(\RREF\begin{bmatrix}\vect v_1&\dots&\vect v_n\end{bmatrix}\)
+  has all pivot rows.
+  \end{itemize}
+\end{observation}
+
 \begin{activity}{5}
   Is the set of Euclidean vectors \(\left\{
   \begin{bmatrix}-4\\2\\3\\0\\-1\end{bmatrix},
