--- a/tex/modules/2-V/sections/4.tex
+++ b/tex/modules/2-V/sections/4.tex
@@ -30,7 +30,8 @@
 
 
 \begin{fact}
-  Any nonempty sub\textbf{set} \(S\) of a vector space \(V\) satisfies the eight
+  Any sub\textbf{set} \(S\) of a vector space \(V\) that contains
+  the additive identity \(\vec 0\) satisfies the eight
   vector space properties automatically, since it is a collection of known
   vectors.
 
