clear up minor confusion on wording

--- a/tex/modules/2-V/sections/5.tex
+++ b/tex/modules/2-V/sections/5.tex
@@ -127,7 +127,7 @@
 \end{activity}
 
 \begin{activity}{5}
-What is the largest number of vectors in \(\IR^4\) that can form a linearly independent set?
+What is the largest number of \(\IR^4\) vectors that can form a linearly independent set?
 \begin{enumerate}[(a)]
 \item \(3\)
 \item \(4\)
@@ -137,9 +137,9 @@ What is the largest number of vectors in \(\IR^4\) that can form a linearly inde
 \end{activity}
 
 \begin{activity}{5}
-What is the largest number of vectors in
+What is the largest number of 
 \[\P^4=\setBuilder{ax^4+bx^3+cx^2+dx+e}{a,b,c,d,e\in\IR}\]
-that can form a linearly independent set?
+vectors that can form a linearly independent set?
 \begin{enumerate}[(a)]
 \item \(3\)
 \item \(4\)
@@ -149,9 +149,9 @@ that can form a linearly independent set?
 \end{activity}
 
 \begin{activity}{5}
-What is the largest number of vectors in
+What is the largest number of 
 \[\P=\setBuilder{f(x)}{f(x)\text{ is any polynomial}}\]
-that can form a linearly independent set?
+vectors that can form a linearly independent set?
 \begin{enumerate}[(a)]
 \item \(3\)
 \item \(4\)
