--- a/tex/modules/2-V/sections/6.tex
+++ b/tex/modules/2-V/sections/6.tex
@@ -202,6 +202,37 @@ the planar subspace.
   Put another way, to compute a basis for the subspace \(\vspan S\),
   simply remove the vectors corresponding to the non-pivot columns of
   \(\RREF[\vect v_1\,\dots\,\vect v_m]\).
+  For example, since
+  \[
+    \RREF
+    \begin{bmatrix}
+      1 & 2 & 3 \\
+      0 & -2 & -2 \\
+      -3 & 1 & -2
+    \end{bmatrix}
+      =
+    \begin{bmatrix}
+      \circledNumber{1} & 0 & 1 \\
+      0 & \circledNumber{1} & 1 \\
+      0 & 0 & 0
+    \end{bmatrix}
+  \]
+  the subspace
+  \(
+    W=\vspan\setList{
+      \begin{bmatrix}1\\0\\-3\end{bmatrix},
+      \begin{bmatrix}2\\-2\\1\end{bmatrix},
+      \begin{bmatrix}3\\-2\\-2\end{bmatrix}
+    }
+  \)
+  has
+  \(
+    \setList{
+      \begin{bmatrix}1\\0\\-3\end{bmatrix},
+      \begin{bmatrix}2\\-2\\1\end{bmatrix}
+    }
+  \)
+  as a basis.
 \end{fact}
 
 \begin{activity}{10}
