--- a/tex/modules/4-A/readiness/test.tex
+++ b/tex/modules/4-A/readiness/test.tex
@@ -40,45 +40,45 @@
 \item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right\} \subset \IR^3.$$
 %C
 \begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It spans but it is linearly dependent
-\item It does not span and is linearly independent %correct
-\item It is a basis of $\IR^3$.
+\item It does not span \(\IR^3\) and is linearly dependent
+\item It spans \(\IR^3\) but it is linearly dependent
+\item It does not span \(\IR^3\) and is linearly independent %correct
+\item It is a basis of \(\IR^3\).
 \end{readinessAssuranceTestChoices}
 
 
 \item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix} , \begin{bmatrix} 1 \\ 1 \\ 3 \end{bmatrix} \right\}\subset \IR^3.$$
 %C
 \begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It is a basis of $\IR^3$. %Correct
-\item It spans but it is linearly dependent
+\item It does not span \(\IR^3\) and is linearly dependent
+\item It does not span \(\IR^3\) and is linearly independent
+\item It is a basis of \(\IR^3\). %Correct
+\item It spans \(\IR^3\) but it is linearly dependent
 \end{readinessAssuranceTestChoices}
 
 
 \item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} -2 \\ 0 \\ -2 \end{bmatrix} , \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} , \begin{bmatrix} 3 \\ 3 \\ -3 \end{bmatrix}\right\}\subset \IR^3.$$
 %B
 \begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It spans but it is linearly dependent %correct
-\item It does not span and is linearly independent
-\item It is a basis of $\IR^3$.
+\item It does not span \(\IR^3\) and is linearly dependent
+\item It spans \(\IR^3\) but it is linearly dependent %correct
+\item It does not span \(\IR^3\) and is linearly independent
+\item It is a basis of \(\IR^3\).
 \end{readinessAssuranceTestChoices}
 
 
 \item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  2 \\ 2 \\ -1 \end{bmatrix}, \begin{bmatrix} -3 \\ 1 \\ -2 \end{bmatrix} , \begin{bmatrix} 1 \\ 5 \\ -4 \end{bmatrix}\right\}\subset \IR^3.$$
 %D
 \begin{readinessAssuranceTestChoices}
-\item It spans but it is linearly dependent
+\item It spans \(\IR^3\) but it is linearly dependent
 \item It is a basis of $\IR^3$.
-\item It does not span and is linearly independent
-\item It does not span and is linearly dependent %correct
+\item It does not span \(\IR^3\) and is linearly independent
+\item It does not span \(\IR^3\) and is linearly dependent %correct
 \end{readinessAssuranceTestChoices}
 
 
 \item Suppose \(S\) is a set of \(\IR^5\) vectors, and you know that every vector in
-      \(\vspan S\) can be written uniquely as a linear combination of the vectors
+      \(\vspan S\) can be written \textit{uniquely} as a linear combination of the vectors
       in \(S\).  What can you conclude about \(S\)?
 %B
 \begin{readinessAssuranceTestChoices}
