fix RAT numbering

--- a/tex/modules/6-G/readiness/test.tex
+++ b/tex/modules/6-G/readiness/test.tex
@@ -1,5 +1,6 @@
 %IF-AT Form B002 41-50
 \begin{readinessAssuranceTest}
+\setcounter{enumi}{40}
 %D
 \item Find the area of the parallelogram with vertices $(0,0)$, $(4,0)$, $(5,2)$, and $(1,2)$.
 \begin{multicols}{2}
