fix sample solution label

--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -468,7 +468,7 @@ Thus a basis for \(W\) is given by
 \]
 \end{solution}
 
-\begin{problem}{S6}
+\begin{problem}{V10}
 Find a basis for the solution set of the homogeneous system of equations
 \begin{alignat*}{6}
 x_1 &\,+\,& x_2 &\,+\,& 3x_3 &\,+\,& x_4 &\,+\,& 2x_5 &=& 0 \\
