make all V9 exercises about finding a basis

--- a/tex/modules/2-V/exercises/V10.tex
+++ b/tex/modules/2-V/exercises/V10.tex
@@ -165,7 +165,8 @@ It follows that the basis for the solution space is given by \(\left\{
 \right\}\).
 \end{solution}
 
-\begin{problem}{V10} Find a basis for the solution space to the homogeneous system of equations
+\begin{problem}{V10} 
+Find a basis for the solution space to the homogeneous system of equations
 given by
 \begin{align*}
 2x_1-2x_2+6x_3-x_4 &=0 \\
